chapter-3/exercise-2.3/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-app-dep
  namespace: log-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-app
  template:
    metadata:
      labels:
        app: log-app
    spec:
      containers:
        - name: log
          image: ismayilkarimli/devops-with-kubernetes:2.3-log
          imagePullPolicy: Always
        - name: ping
          image: ismayilkarimli/devops-with-kubernetes:2.3-ping
          imagePullPolicy: Always
