chapter-3/exercise-2.3/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-app-svc
  namespace: log-app-ns
spec:
  type: ClusterIP
  selector:
    app: log-app
  ports:
    - name: log-app
      port: 2345
      protocol: TCP
      targetPort: 8080
    - name: ping-app
      port: 2346
      protocol: TCP
      targetPort: 8081
