chapter-3/exercise-2.3/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: log-app-ns
  name: log-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /log
            pathType: Prefix
            backend:
              service:
                name: log-app-svc
                port:
                  number: 2345
          - path: /pingpong
            pathType: Exact
            backend:
              service:
                name: log-app-svc
                port:
                  number: 2346
